# EVERNIX_AI

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  render.yaml
.devcontainer/: devcontainer.json
data/cache_fundamentals/: AAPL.json  AMZN.json  KO.json  MSFT.json  NVDA.json  TSLA.json
data/cache_prices/: AAPL.pkl  AMZN.pkl  KO.pkl  MSFT.pkl  NVDA.pkl  TSLA.pkl
frontend/components/: AgentCard.js  ResultsTable.js  UniverseSelector.js
frontend/src/app/: layout.js  page.js
notebooks/: 01_quickstart.ipynb  02_buffet_only.ipynb  03_ackman_only.ipynb  04_buffet_and_ackman.ipynb  ackman_decisions.csv  all_agents_votes.csv  buffett_ackman_oversight.csv  buffett_decisions.csv  final_oversight_decisions.csv
results/: ackman_equity.csv  buffett_equity.csv  soros_equity.csv
src/agent_lab/: __init__.py  app.py  requirements.txt
src/agent_lab/agents/: ackman.py  base.py  buffett.py  cathie.py  congress.py  lynch.py  momentum.py  soros.py
src/agent_lab/api/: main.py  requirements.txt  service.py
src/agent_lab/backtesting/: engine.py
src/agent_lab/data_connectors/: cache.py  finnhub_client.py  finnhub_data.py  market_data.py  price_data.py
src/agent_lab/ensemble/: oversight.py
src/agent_lab/evaluation/: accuracy_eval.py
src/agent_lab/plots/: equity_curves.py
src/agent_lab/scripts/: backtest_agents.py  evaluate_agents.py  run_mvp.py
